fix(styling): fix various spacing issues:

--- a/resources/assets/styles/blocks/gform.scss
+++ b/resources/assets/styles/blocks/gform.scss
@@ -5,10 +5,21 @@
 .gform_fields {
   display: grid;
   grid-gap: var(--spacing-m);
+  width: 100%;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(auto-fill, auto);
 
   .medium {
     max-width: var(--grid-column-5);
   }
+}
+
+.gfield {
+  grid-column: 1 / -1;
+}
+
+.gform_confirmation_wrapper {
+  margin-top: var(--spacing-m);
 }
 
 .gfield_label {
